app/styles/tailwind.css
:root {
  color-scheme: dark;
}

@media (min-width: 1024px) {
  .prose :where(.prose > *):not(:where([class~="not-prose"] *)) {
    max-width: 40rem;
    margin-left: auto;
    margin-right: auto;
  }
}

.prose :where(.prose > *):not(:where([class~="not-prose"] *)) {
  max-width: 50rem;
  margin-left: calc(50% - min(50%, 33rem));
  margin-right: calc(50% - min(50%, 33rem));
}

input[type="color"] {
  -webkit-appearance: none;
  border: none;
}
input[type="color"]::-webkit-color-swatch-wrapper {
  padding: 0;
}
input[type="color"]::-webkit-color-swatch {
  border: none;
  border-radius: 0.25rem;
}

@tailwind base;
@tailwind components;
@tailwind utilities;

